<resources>
    <string name="app_name">MEMO</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="sign_in">Belépés</string>
    <string name="required_field">A mező nem lehet üres!</string>
    <string name="sign_up">Regisztráció</string>
    <string name="password_again">Jelszó újra</string>
    <string name="email">E-mail cím</string>
    <string name="passwords_not_match">A jelszó nem egyezik!</string>
    <string name="invalid_email">Nem érvényes e-mail cím</string>
    <string name="too_short_password">A jelszó legalább %1$d karakter</string>
    <string name="server_not_available">A kiszolgáló nem elérhető</string>
    <string name="error_occurred">Hiba történt</string>
    <string name="no_internet">Nincs internet</string>
    <string name="network_error">Hálózati hiba történt</string>
    <string name="check_internet">Ellenőrizd az internetkapcsolatot</string>
    <string name="account">Fiók</string>
    <string name="dictionaries">Szótárak</string>
    <string name="fast_access">Gyors elérés</string>
    <string name="refresh">Frissítés</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="english">Angol</string>
    <string name="hungarian">Magyar</string>
    <string name="logout">Kijelentkezés</string>
    <string name="not_existing_page">Nem létező oldal!</string>
    <string name="Unkown">Ismeretlen</string>
    <string name="description">Leírás</string>
    <string name="phrases_dd">Kifejezések:</string>
    <string name="viewers_users_dd">Használók:</string>
    <string name="Public">Nyilvános</string>
    <string name="Private">Privát</string>
    <string name="dictionary">szótár</string>
    <string name="not_existing_list_item_type">Nem létező lista elem típus</string>
    <string name="network_configuration">Hálózati konfiguráció</string>
    <string name="https">https://</string>
    <string name="double_dot">:</string>
    <string name="server_ip_address">Szerver IP cím</string>
    <string name="port">Port</string>
    <string name="cancel">Mégse</string>
    <string name="save">Mentés</string>
    <string name="Default">Alapértelmezett</string>
    <string name="dictionaries_dd">Szótárak:</string>
    <string name="menu"><u>Menü</u></string>
    <string name="server_connection_on">Létrejött a kapcsolat a szerverrel</string>
    <string name="server_connection_off">Nem jött létre a kapcsolat a szerverrel</string>
    <string name="manual_configuration_can_help">A manuális konfiguráció segíthet</string>
    <string name="dictionary_name">Szótárnév</string>
    <string name="empty" />
    <string name="min_d">Min.</string>
    <string name="max_d">Max.</string>
    <string name="language_dd">Nyelv:</string>
    <string name="not_existing_language_code">Nem lézető nyelvkód</string>
    <string name="source">Forrás</string>
    <string name="destination">Cél</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="only_own_dd">Csak saját:</string>
    <string name="only_private_dd">Csak privát:</string>
    <string name="sorting_dd">Rendezés:</string>
    <string name="descending">Csökkenő</string>
    <string name="name">Név</string>
    <string name="phrases">Kifejezések</string>
    <string name="date">Dátum</string>
    <string name="viewer_users">Használók</string>
    <string name="public_dd">Publikus:</string>
    <string name="source_language_dd">Forrásnyelv:</string>
    <string name="destination_language_dd">Célnyelv:</string>
    <string name="viewing_dd">Használat:</string>
    <string name="delete_dd">Törlés:</string>
    <string name="fast_access_dd">Gyors elérés:</string>
    <string name="are_you_sure_to_do">Biztosan végrehajtja a következő műveletet?</string>
    <string name="named_dictionary_delete"> nevű szótár törlése</string>
    <string name="named_attribute_delete"> nevű attribútum törlése</string>
    <string name="name_dictionary_unsubscribe"> nevű szótár használatának leállítása</string>
    <string name="description_too_long">A leírás max. %1$d karakter lehet.</string>
    <string name="dictionary_name_too_long">A szótár név max. %1$d karakter lehet.</string>
    <string name="attribute_name_too_long">Az attribute név max. %1$d karakter lehet.</string>
    <string name="translation_original_too_long">A kifejezlés eredeti jelentése max. %1$d karakter lehet.</string>
    <string name="translation_translated_too_long">A kifejezlés lefordított jelentése max. %1$d karakter lehet.</string>
    <string name="attribute_value_too_long">Az attribútum értéke max. %1$d karakter lehet.</string>
    <string name="parameter_value_too_long">Az érték max. %1$d karakter lehet.</string>
    <string name="username_too_long">A felhasználónév max. %1$d karakter lehet.</string>
    <string name="email_too_long">Az e-mail cím max. %1$d karakter lehet.</string>
    <string name="password_too_long">A jelszó max. %1$d karakter lehet.</string>
    <string name="now_dd"> Jelenleg: %1$d karakter</string>
    <string name="viewers_dd">Használók:</string>
    <string name="all_dd">Összes:</string>
    <string name="unable_load_own_dictionaries">Nem sikerült betölteni a saját szótárakat</string>
    <string name="unable_load_public_dictionaries">Nem sikerült betölteni a nyilvános szótárakat</string>
    <string name="unable_load_all_dictionaries">Nem sikerült betölteni az összes szótárat</string>
    <string name="unable_load_own_attributes">Nem sikerült betölteni a saját attribútumokat</string>
    <string name="unable_load_all_attributes">Nem sikerült betölteni az összes attribútumot</string>
    <string name="update_dictionary">Szótár módosítása</string>
    <string name="create_dictionary">Szótár létrehozása</string>
    <string name="type_dd">Típus:</string>
    <string name="parameters">Értékkészlet</string>
    <string name="parameters_dd">Értékkészlet:</string>
    <string name="type">Típus</string>
    <string name="attribute_name">Attribútum név</string>
    <string name="all">Összes</string>
    <string name="attributes_dd">Attribútumok:</string>
    <string name="attributes">Attribútumok</string>
    <string name="text">Szöveg</string>
    <string name="list">Lista</string>
    <string name="checkbox">Jelölőnégyzet</string>
    <string name="values_dd">Értékek:</string>
    <string name="unable_load_user">A felhasználói adatok betöltése sikertelen</string>
    <string name="date_format">yyyy.MM.dd.</string>
    <string name="translations_dd">Kifejezések:</string>
    <string name="account_delete">Fiók törlése:</string>
    <string name="account_delete_message">A felhasználói fiók törlése.</string>
    <string name="success_save">Sikeres mentés</string>
    <string name="update_attribute">Attribútum módosítása</string>
    <string name="create_attribute">Attribútum létrehozása</string>
    <string name="value">Érték</string>
    <string name="one_parameter_required">Szükséges legalább egy paraméter</string>
    <string name="attribute_delete_fail">Az attribútum törlése sikertelen</string>
    <string name="attribute_delete_success">Az attribútum törlése sikeres</string>
    <string name="attribute_update_fail">Az attribútum módosítása sikertelen</string>
    <string name="attribute_create_success">Az attribútum létrehozása sikeres</string>
    <string name="attribute_create_fail">Az attribútum létrehozása sikertelen</string>
    <string name="account_delete_fail">A fiók törlése sikertelen</string>
    <string name="account_delete_success">A fiók törlése sikeres</string>
    <string name="account_update_fail">A fiók módosítása sikertelen</string>
    <string name="dictionary_delete_success">A szótár törlése sikeres</string>
    <string name="dictionary_delete_fail">A szótár törlése sikertelen</string>
    <string name="dictionary_update_fail">A szótár módosítása sikertelen</string>
    <string name="dictionary_subscribe_fail">A figyelés beállítása sikertelen</string>
    <string name="dictionary_unsubscribe_fail">A figyelés leállítása sikertelen</string>
    <string name="dictionary_create_fail">A szótár létrehozása sikertelen</string>
    <string name="users">Felhasználók</string>
    <string name="users_dd">Felhasználók:</string>
    <string name="unable_to_load_all_user">Az összes felhasználó betöltése sikertelen</string>
    <string name="unable_to_load_users">A felhasználók betöltése sikertelen</string>
    <string name="translations">Kifejezések</string>
    <string name="viewed_dictionaries_dd">Figyelt szótárak:</string>
    <string name="update_account">Fiók módosítása</string>
    <string name="named_user_delete"> nevű felhasználó törlése</string>
    <string name="user_delete_success">A felhasználó törlése sikeres</string>
    <string name="user_delete_fail">A felhasználó törlése sikertelen</string>
    <string name="role_dd">Jogosultság:</string>
    <string name="cant_update_admin">Adminisztrátori fiók nem módosítható</string>
    <string name="no_changes">Nem történt módosítás</string>
    <string name="original">Eredeti</string>
    <string name="translated">Fordított</string>
    <string name="unable_to_load_all_translation">Nem sikerült betölteni az összes kifejezést</string>
    <string name="unable_to_load_translations">Nem sikerült betölteni a kifejezéseket</string>
    <string name="update_translation">Kifejezés módosítása</string>
    <string name="create_translation">Kifejezés létrehozása</string>
    <string name="dd">:</string>
    <string name="random">Véletlenszerű</string>
    <string name="dictionary_dd">Szótár:</string>
    <string name="translation_create_fail">A kifejezés létrehozása sikertelen</string>
    <string name="translation_delete">kifejezés törlése</string>
    <string name="translation_delete_success">A kifejezés törlése sikeres</string>
    <string name="translation_delete_fail">A kifejezés törlése sikertelen</string>
    <string name="translation_update_fail">A kifejezés módosítása sikertelen</string>
    <string name="translation_create_success">A kifejezés létrehozása sikeres</string>
    <string name="dictionary_create_success">A szótár létrehozása sikeres</string>
    <string name="practice">Gyakorlás</string>
    <string name="memorygame">Memóriajáték</string>
    <string name="start">Kezdés</string>
    <string name="unable_to_load_dictionary">A szótár betöltése sikertelen</string>
    <string name="create_or_view_one_dictionary">Előbb hozz létre vagy használj legalább egy szótárat</string>
    <string name="empty_dictionary">A szótár üres</string>
    <string name="create_dictionary_first">Előbb hozz létre szótárat</string>
    <string name="unable_to_translate">A fordítás sikertelen</string>
    <string name="choose_color">Válassz színt</string>
    <string name="choose">Választ</string>
    <string name="next">Tovább</string>
    <string name="as_developer">fejlesztői</string>
    <string name="as_tester">tesztelői</string>
    <string name="the_app">Az alkalmazást</string>
    <string name="use_as">módban használom</string>
    <string name="invalidate_usage_mode">Használatimód érvénytelenítése</string>
    <string name="connecting_to_server">Kapcsolódás a szerverhez</string>
</resources>
