<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_translations"
            android:icon="@drawable/ic_translation_48dp"
            android:title="@string/translations" />
        <item
            android:id="@+id/nav_dictionarylist"
            android:icon="@drawable/ic_dictionary_48dp"
            android:title="@string/dictionaries" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_48dp"
            android:title="@string/account" />
        <group android:id="@+id/group_dictionaries">
            <item
                android:id="@+id/nav_fast_access"
                android:title="@string/fast_access"
                android:enabled="false"/>
        </group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/logout"
            android:menuCategory="secondary"/>
    </group>

</menu>
