<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settings"
            type="hu.mobilclient.memo.fragments.NetworkSettingFragment.NetworkSettings" />
        <variable
            name="fragment"
            type="hu.mobilclient.memo.fragments.NetworkSettingFragment" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_blue"
        android:padding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/network_configuration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/fg_network_settings_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https"
                android:textColor="@color/primary_light"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_light">

                <EditText
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/server_ip_address"
                    android:inputType="textImeMultiLine"
                    android:textColor="@color/primary_light"
                    android:text="@={settings.Ip}"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_dot"
                android:textColor="@color/primary_light"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primary_light">

                <EditText
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/port"
                    android:inputType="textImeMultiLine"
                    android:textColor="@color/primary_light"
                    android:text="@={settings.Port}"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{fragment::saveClick}"
                android:layout_gravity="start"
                android:text="@string/save" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/primary_light"
                    android:onClick="@{fragment::resetClick}"
                    android:text="@string/Default"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:onClick="@{fragment::resetClick}"
                    android:src="@drawable/ic_refresh_48dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>