<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="filter"
            type="hu.mobilclient.memo.filters.AttributeFilter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/bg_rounded_accent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/fg_account_attribute_filter_content_iv_close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/fg_account_attribute_filter_content_iv_reset"
            android:src="@drawable/ic_refresh_48dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/fg_account_attribute_filter_content_ll_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fg_account_attribute_filter_content_iv_close">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="2"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/parameters_dd" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/fg_account_attribute_filter_content_et_min_parameter_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/min_d"
                        android:inputType="textImeMultiLine"
                        android:text="@={filter.minParameterCount}"
                        android:textSize="18sp"
                        android:importantForAutofill="no" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/fg_account_attribute_filter_content_et_max_parameter_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/max_d"
                        android:inputType="textImeMultiLine"
                        android:text="@={filter.maxParameterCount}"
                        android:textSize="18sp"
                        android:importantForAutofill="no" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/type_dd" />

                <Spinner
                    android:id="@+id/fg_account_attribute_filter_content_sp_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{filter.IsAdmin ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_dd"/>


                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:checked="@={filter.All}"
                    android:onCheckedChanged="@{filter::onAllChanged}"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="top"
                        android:text="@string/sorting_dd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/descending" />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:checked="@={filter.IsDescending}"
                        android:onCheckedChanged="@{filter::onIsDescendingChanged}" />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:onCheckedChanged="@{filter::onSortChanged}">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={filter.SortByAttributeName}"
                        android:hint="@string/name" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={filter.SortByUserName}"
                        android:hint="@string/username"
                        android:visibility="@{filter.IsAdmin ? View.VISIBLE : View.GONE}"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:checked="@={filter.SortByParameter}"
                        android:hint="@string/parameters" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:checked="@={filter.SortByType}"
                        android:hint="@string/type" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fg_account_attribute_filter_content_ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fg_account_attribute_filter_content_iv_close">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fg_account_attribute_filter_content_et_attribute_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/attribute_name"
                    android:inputType="textImeMultiLine"
                    android:text="@={filter.AttributeName}"
                    android:textSize="18sp"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{filter.IsAdmin ? View.VISIBLE : View.GONE}">

                <EditText
                    android:id="@+id/fg_account_attribute_filter_content_et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textImeMultiLine"
                    android:text="@={filter.UserName}"
                    android:textSize="18sp"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>